# python-test-trivial

./: setup.cfg  setup.py
