[metadata]
name = test_trivial
author = Cory Bennett
author_email = pypi@corybennett.org
summary = Trivial testing framework that generated TAP output
description-file = README
license = New BSD License
classifier =
    Development Status :: 4 - Beta
        Environment :: Console
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: BSD License
        Operating System :: OS Independent
        Programming Language :: Python  
        Topic :: Software Development :: Testing

[files]
packages =
    testtrivial

